# pai-rs

./: Cargo.toml  README.md  index.html
src/: lib.rs  pairs.rs  pairs_tests.rs
